--- a/tech.css
+++ b/tech.css
@@ -69,7 +69,7 @@ border-radius: 0px;
   border-color: red;
   border-width: 1px;
 }
-/*UNREAD INDICATORS AND MARGINS*/
+/*UNREAD INDICATORS*/
 [class*="unreadImportant"], .item__58105 {
 	background-color: black;
 	border-radius: 0px;
@@ -78,6 +78,22 @@ border-radius: 0px;
 	border-width: 3px;
 	border-color: red;
 	width:15px;
+}
+/*CHANNEL BORDERS*/
+.iconVisibility_c69b6d, .iconVisibility__29444, .mainContent__29444{
+	border-radius: 0px;
+	border-color: red;
+	border-width: 2px;
+	border-style:solid;
+	margin: 4px;
+	padding: 0px;
+	font-size: 2px;
+}
+/*TILE SIZING*/
+/*channel bar*/
+.sidebarList__5e434 {
+	width:360px;
+	margin-left: 10px;
 }
 /*folder area*/
 .wrapper_ef3116 {
@@ -89,21 +105,6 @@ border-radius: 0px;
 }
 .folderGroup__48112 {
 	margin-left:20px;
-}
-/*channel bar*/
-.sidebarList__5e434 {
-	width:360px;
-	margin-left: 10px;
-}
-/*CHANNEL BORDERS*/
-.iconVisibility_c69b6d, .iconVisibility__29444, .mainContent__29444{
-	border-radius: 0px;
-	border-color: red;
-	border-width: 2px;
-	border-style:solid;
-	margin: 4px;
-	padding: 0px;
-	font-size: 2px;
 }
 /*AVATARS*/
 .avatar_c19a55 {
