--- a/tech.css
+++ b/tech.css
@@ -91,7 +91,7 @@ border-radius: 0px;
 }
 /*TILE SIZING*/
 /*channel bar*/
-.sidebarList__5e434 {
+.wrapper_ef3116  {
 	width:360px;
 	margin-left: 10px;
 }
