--- a/tech.css
+++ b/tech.css
@@ -103,7 +103,7 @@ border-radius: 0px;
 	border-width: 2px;
 	border-color: var(--danger-color);
 }
-.folderGroup__48112 {
+.folderGroup__48112, .tree_ef3116 {
 	margin-left:20px;
 }
 /*AVATARS*/
